<resources>
    <string name="app_name">OneSide</string>
    <string name="_1">1</string>
    <string name="complete">Complete</string>
    <string name="show_solution">Show Solution</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>
    <string name="no_of_steps">Moves:</string>
    <string name="preference_file_key">PREFERENCE_FILE_KEY</string>
    <string name="new_game">New Game</string>
    <string name="how_to_play">How to play</string>
    <string name="about">About</string>
    <string name="choose_your_level">Choose your difficulty level</string>
    <string name="app_logo">App Logo</string>
    <string name="row_swap">Row Swap</string>
    <string name="column_swap">Column Swap</string>
    <string name="resume">Resume</string>
    <string name="settings">Settings</string>
    <string name="level">Level</string>
    <string name="see_solution_dialog">Seeing the solution would end the game. Continue?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="winning_screen">Winning screen</string>
    <string name="contributors">Contributors</string>
    <string name="harishiv_singh">Harishiv Singh</string>
    <string name="user_description">What the hell did you do?</string>
    <string name="shubhesh_dwivedi">Shubhesh Dwivedi</string>
    <string name="vishal_verma">Vishal Verma</string>
    <string name="first_screen_text">Hey there, above you see a matrix and some swapping buttons. Your goal is to match the number in a cell to its respective smaller grid number.</string>
    <string name="second_screen_text">You can use row swap and column to achieve your goal. Swapping only affects two rows and two columns corresponding to the swapping button.</string>
    <string name="third_screen_text">Blue colour represents a row swap</string>
    <string name="fourth_screen_text">Pink colour represents a column swap</string>
    <string name="grid_info">Grid info</string>
    <string name="game_desc">OneSide is a unique mathematical puzzle game. You can also play the same on our website.</string>
    <string name="app_info">App Info</string>
    <string name="home_screen">Home Screen</string>
    <string name="play_game">Play Game</string>
    <string name="you_did_it">You did it!</string>
    <string name="version_1_0">Version 1.0</string>
    <string name="website">Website</string>
    <string name="github">Github</string>
    <string name="level_heading">Level:</string>
    <string name="restart">Restart</string>
    <string name="play_again">Play again</string>
    <string name="back_to_home">Back to home</string>
    <string name="first_position">First Position</string>
    <string name="last_position">Last Position</string>

</resources>
