<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ResumeActivity">

    <LinearLayout
        android:id="@+id/ll_app_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_24"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="@dimen/dp_48"
            android:layout_height="@dimen/dp_48"
            android:contentDescription="@string/app_logo"
            android:src="@drawable/ic_app_logo" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_16">

            <TextView
                android:id="@+id/tv_app_name_shadow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:alpha="0.2"
                android:fontFamily="@font/pacifico"
                android:text="@string/app_name"
                android:textColor="#448CCB"
                android:textSize="@dimen/sp_32"
                android:translationX="4dp"
                android:translationY="-4dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_app_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/pacifico"
                android:text="@string/app_name"
                android:textColor="#155892"
                android:textSize="@dimen/sp_32"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll_app_name"
        app:layout_constraintBottom_toBottomOf="parent" >

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_resume"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/dp_16"
            android:layout_marginTop="@dimen/dp_24"
            android:layout_marginStart="@dimen/dp_24"
            android:layout_marginEnd="@dimen/dp_24"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/resume"
            android:textSize="@dimen/sp_20"
            app:cornerRadius="@dimen/dp_32"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_new_game"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/dp_16"
            android:layout_marginTop="@dimen/dp_24"
            android:layout_marginStart="@dimen/dp_24"
            android:layout_marginEnd="@dimen/dp_24"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/new_game"
            android:textSize="@dimen/sp_20"
            app:cornerRadius="@dimen/dp_32"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_how_to_play"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/dp_16"
            android:layout_marginTop="@dimen/dp_24"
            android:layout_marginStart="@dimen/dp_24"
            android:layout_marginEnd="@dimen/dp_24"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/how_to_play"
            android:textSize="@dimen/sp_20"
            app:cornerRadius="@dimen/dp_32"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_about"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/dp_16"
            android:layout_marginTop="@dimen/dp_24"
            android:layout_marginStart="@dimen/dp_24"
            android:layout_marginEnd="@dimen/dp_24"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/about"
            android:textSize="@dimen/sp_20"
            app:cornerRadius="@dimen/dp_32"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>