<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    app:cardCornerRadius="@dimen/dp_10">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/color_white"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/dp_24">

        <ImageView
            android:id="@+id/iv_winning_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/winning_screen"
            android:src="@drawable/ic_medal_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_16"
            android:fontFamily="@font/museo_sans_500"
            android:text="@string/you_did_it"
            android:textAlignment="center"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/sp_24" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_play_again"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_16"
            android:backgroundTint="#d6e4f1"
            android:fontFamily="@font/museo_sans_300"
            android:letterSpacing="0"
            android:paddingStart="@dimen/dp_32"
            android:paddingTop="@dimen/dp_12"
            android:paddingEnd="@dimen/dp_32"
            android:paddingBottom="@dimen/dp_12"
            android:text="@string/play_again"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/sp_16"
            app:cornerRadius="@dimen/dp_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_winning_logo"
            app:strokeColor="@color/colorPrimary"
            app:strokeWidth="0.5dp" />

        <TextView
            android:id="@+id/btn_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/museo_sans_300"
            android:paddingTop="@dimen/dp_12"
            android:text="@string/back_to_home"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/sp_16"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_winning_logo" />

    </LinearLayout>

</androidx.cardview.widget.CardView>