<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ui.LevelActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_app_name_shadow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="0.2"
            android:fontFamily="@font/pacifico"
            android:text="@string/app_name"
            android:textColor="#448CCB"
            android:textSize="@dimen/sp_72"
            android:translationX="4dp"
            android:translationY="-4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/pacifico"
            android:text="@string/app_name"
            android:textColor="#155892"
            android:textSize="@dimen/sp_72"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tv_select_level_heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_40"
        android:text="@string/please_choose_your_level"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/sp_20"
        android:textAlignment="center" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_easy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dp_16"
        android:layout_marginStart="@dimen/dp_24"
        android:layout_marginTop="@dimen/dp_16"
        android:layout_marginEnd="@dimen/dp_24"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/easy"
        android:textSize="@dimen/sp_16"
        app:cornerRadius="@dimen/dp_32"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_medium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dp_16"
        android:layout_marginStart="@dimen/dp_24"
        android:layout_marginTop="@dimen/dp_16"
        android:layout_marginEnd="@dimen/dp_24"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/medium"
        android:textSize="@dimen/sp_16"
        app:cornerRadius="@dimen/dp_32"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_hard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dp_16"
        android:layout_marginStart="@dimen/dp_24"
        android:layout_marginTop="@dimen/dp_16"
        android:layout_marginEnd="@dimen/dp_24"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/hard"
        android:textSize="@dimen/sp_16"
        app:cornerRadius="@dimen/dp_32"/>

</LinearLayout>
