<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ui.LandingActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_app_name_shadow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:alpha="0.2"
            android:fontFamily="@font/pacifico"
            android:text="@string/app_name"
            android:textColor="#448CCB"
            android:textSize="@dimen/sp_72"
            android:translationX="4dp"
            android:translationY="-4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_app_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:fontFamily="@font/pacifico"
            android:text="@string/app_name"
            android:textColor="#155892"
            android:textSize="@dimen/sp_72"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_new_game"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_24"
        android:layout_marginTop="@dimen/dp_48"
        android:layout_marginEnd="@dimen/dp_24"
        android:fontFamily="@font/museo_sans_500"
        android:padding="@dimen/dp_16"
        android:text="@string/new_game"
        android:textSize="@dimen/sp_20"
        app:cornerRadius="@dimen/dp_32"
        app:strokeColor="@color/colorPrimary" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_how_to_play"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_24"
        android:layout_marginTop="@dimen/dp_24"
        android:layout_marginEnd="@dimen/dp_24"
        android:fontFamily="@font/museo_sans_500"
        android:padding="@dimen/dp_16"
        android:text="@string/how_to_play"
        android:textSize="@dimen/sp_20"
        app:cornerRadius="@dimen/dp_32"
        app:strokeColor="@color/colorPrimary" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_about"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_24"
        android:layout_marginTop="@dimen/dp_24"
        android:layout_marginEnd="@dimen/dp_24"
        android:fontFamily="@font/museo_sans_500"
        android:padding="@dimen/dp_16"
        android:text="@string/about"
        android:textSize="@dimen/sp_20"
        app:cornerRadius="@dimen/dp_32"
        app:strokeColor="@color/colorPrimary" />

</LinearLayout>