<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.SolutionActivity">

    <LinearLayout
        android:id="@+id/ll_app_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_24"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="@dimen/dp_48"
            android:layout_height="@dimen/dp_48"
            android:contentDescription="@string/app_logo"
            android:src="@drawable/ic_app_logo" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_16">

            <TextView
                android:id="@+id/tv_app_name_shadow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:alpha="0.2"
                android:fontFamily="@font/pacifico"
                android:text="@string/app_name"
                android:textColor="#448CCB"
                android:textSize="@dimen/sp_32"
                android:translationX="4dp"
                android:translationY="-4dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_app_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/pacifico"
                android:text="@string/app_name"
                android:textColor="#155892"
                android:textSize="@dimen/sp_32"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/tv_no_of_steps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="@dimen/dp_144"
        android:layout_margin="@dimen/dp_16"
        android:paddingStart="@dimen/dp_16"
        android:paddingEnd="@dimen/dp_16"
        android:paddingTop="@dimen/dp_8"
        android:paddingBottom="@dimen/dp_8"
        android:text="@string/no_of_steps"
        android:textAlignment="center"
        android:textSize="@dimen/sp_20"
        android:textColor="@color/colorPrimary"
        android:background="@drawable/light_curve_outline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll_app_name"
        app:layout_constraintBottom_toTopOf="@id/rl_matrix"/>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/civ_prev_btn"
        android:layout_width="@dimen/dp_48"
        android:layout_height="@dimen/dp_48"
        android:layout_marginStart="@dimen/dp_16"
        android:src="@drawable/ic_navigate_before_black_24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <RelativeLayout
        android:id="@+id/rl_matrix"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_16"
        app:layout_constraintEnd_toStartOf="@id/civ_next_btn"
        app:layout_constraintStart_toEndOf="@id/civ_prev_btn"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <GridView
            android:id="@+id/gv_solution_grid"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:numColumns="3"
            android:stretchMode="columnWidth" />

    </RelativeLayout>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/civ_next_btn"
        android:layout_width="@dimen/dp_48"
        android:layout_height="@dimen/dp_48"
        android:layout_marginEnd="@dimen/dp_16"
        android:src="@drawable/ic_navigate_next_black_24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <LinearLayout
        android:id="@+id/ll_row_swap"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_16"
        android:layout_marginBottom="@dimen/dp_16"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/btn_new_game"
        app:layout_constraintEnd_toStartOf="@id/ll_column_swap"
        app:layout_constraintStart_toStartOf="parent">

        <View
            android:layout_width="@dimen/dp_24"
            android:layout_height="@dimen/dp_24"
            android:background="@drawable/curve_boundary"
            android:backgroundTint="@color/colorRowSwap" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_16"
            android:text="@string/row_swap"
            android:textSize="@dimen/sp_16" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_column_swap"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dp_16"
        android:layout_marginBottom="@dimen/dp_16"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/btn_new_game"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/ll_row_swap">

        <View
            android:layout_width="@dimen/dp_24"
            android:layout_height="@dimen/dp_24"
            android:background="@drawable/curve_boundary"
            android:backgroundTint="@color/colorColumnSwap" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_16"
            android:text="@string/column_swap"
            android:textSize="@dimen/sp_16" />

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_new_game"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/dp_16"
        android:minWidth="@dimen/dp_180"
        android:layout_marginStart="@dimen/dp_16"
        android:layout_marginEnd="@dimen/dp_16"
        android:layout_marginBottom="@dimen/dp_24"
        android:backgroundTint="@color/colorPrimary"
        android:textSize="@dimen/sp_16"
        android:text="@string/new_game"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:cornerRadius="@dimen/dp_32"/>

</androidx.constraintlayout.widget.ConstraintLayout>