<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cl_alert_dialog"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/color_white"
    android:padding="@dimen/dp_16"
    app:cardCornerRadius="@dimen/dp_8">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/dp_16">

        <TextView
            android:id="@+id/tv_solution_dialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/museo_sans_300"
            android:text="@string/see_solution_dialog"
            android:textAlignment="center"
            android:textSize="@dimen/sp_20"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_no"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_16"
            android:backgroundTint="@color/colorBackgroundTint"
            android:fontFamily="@font/museo_sans_300"
            android:gravity="center"
            android:letterSpacing="0"
            android:paddingStart="@dimen/dp_32"
            android:paddingTop="@dimen/dp_12"
            android:paddingEnd="@dimen/dp_32"
            android:paddingBottom="@dimen/dp_12"
            android:text="@string/no"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/sp_16"
            app:cornerRadius="@dimen/dp_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/btn_yes"
            app:layout_constraintTop_toBottomOf="@id/tv_solution_dialog"
            app:strokeColor="@color/colorPrimary"
            app:strokeWidth="0.5dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_yes"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_16"
            android:backgroundTint="@color/color_white"
            android:fontFamily="@font/museo_sans_300"
            android:gravity="center"
            android:letterSpacing="0"
            android:paddingStart="@dimen/dp_32"
            android:paddingTop="@dimen/dp_12"
            android:paddingEnd="@dimen/dp_32"
            android:paddingBottom="@dimen/dp_12"
            android:text="@string/yes"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/sp_16"
            app:cornerRadius="@dimen/dp_24"
            app:layout_constraintEnd_toStartOf="@id/btn_no"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_solution_dialog"
            app:strokeColor="@color/colorPrimary"
            app:strokeWidth="0.5dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>